scss/components/_faq.scss
/* ============================================= */
/*              Main Styles                      */
/* ============================================= */

html {
    position: relative;
}

footer {
    text-align: center;
}

.image {
    grid-area: image;
}

.question-container {
    background-color: #fff;
    width: 90%;
    margin: auto;
    border-radius: 25px;
    padding-bottom: 50px;
    margin-bottom: 130px;
    margin-top: 130px;
    h1 {
        text-align: center;
        padding-top: 160px;
        font-weight: 700;
        font-size: 2.3em;
        grid-area: header;
    }
    .question-wrapper {
        margin: 0 15px 0 15px;
        border-bottom: 1px solid $divider-color;
    }
    .question {
        display: flex;
        align-items: center;
        cursor: pointer;
        svg {
            margin-left: auto;
        }
        p:hover {
            color: $hover-state
        }
        p:active {
            color: #000;
        }
    }
    .answer {
        color: $answer-txt;
        font-size: 14px;
    }
}

.hide {
    display: none;
}

.bold {
    font-weight: 700;
}

.rotate-down {
    transform: rotate(180deg);
    transition: transform .3s ease;
}

.questions-div {
    grid-area: question;
    margin-top: 100px;
}

// Rotate rule concept from: https://stackoverflow.com/questions/26173376/rotate-font-awesome-icon-on-click/26173496

// This rotate class is added to the HTML element so that it is always there -> then when the above .rotate-down rule is removed it returns to it's normal position, with the transition
.rotate {
    transition: all .3s ease;
}

#woman {
    position: absolute;
    z-index: 2;
    // Centering idea from gopalraju on Stackoverflow: https://stackoverflow.com/questions/30515472/how-to-resize-an-absolute-image-that-is-scale-to-the-window-size/30515975#30515975?newreg=e66d971cdda64570999297785b74c6cb
    left:50%;
    top:50%;
    transform: translate(-55%, -228%);
    -moz-transform: translate(-55%, -228%);
    -webkit-transform: translate(-55%, -228%);
    -o-transform: translate(-55%, -228%);
    @media (min-width: 767px) {
        display: none;
    }
}

#shadow {
    position: absolute;
    z-index: 1;
    left:50%;
    top:50%;
    transform: translate(-50%, -325%);
    -moz-transform: translate(-50%, -325%);
    -webkit-transform: translate(-50%, -325%);
    -o-transform: translate(-50%, -325%);
    @media (min-width: 767px) {
        display: none;
    }
}

/* ============================================= */
/*              Media Queries                    */
/* ============================================= */
@media (min-width: 768px) {
    .question-container {
        display: grid;
        grid-template-columns: 1fr;
        grid-template-rows: auto;
        grid-template-areas: 
            "image" "header",
            "image" "question",
            "image" "question",
            "image" "question",
            "image" "question",
            "image" "question",
        ;
        h1 {
            padding-top: 0;
        }
    }
}

